# CPP-LFunction

./: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml
include/: dirichlet_clt_t.hpp  dirichlet_val_t.hpp  l_functions.hpp  l_functions_flint.hpp  l_vec_scan.hpp  selberg_clt.hpp
src/: dirichlet_clt_t.cpp  dirichlet_val_t.cpp  index.html  l_functions.cpp  l_functions_flint.cpp  l_vec_scan.cpp  main.cpp  selberg_clt.cpp
static/: index.html  selberg.html
static/css/: style.css
static/dirichlet_clt_t/: index.html
static/dirichlet_val_t/: index.html
static/js/: app.js
